@@ -257,16 +257,13 @@ public class ChannelServiceImpl extends AbstractChannelService {
      * 2.logSplitExpress:/home/work/log/log-agent/(server.log.*|error.log.*) realFilePaths: ["/home/work/log/log-agent/server.log","/home/work/log/log-agent/server.log"]
      * 2.logSplitExpress:/home/work/log/(log-agent|log-stream)/server.log.* realFilePaths: ["/home/work/log/log-agent/server.log","/home/work/log/log-stream/server.log"]
      * The real file does not exist, it should also listen
-     *
-     * @param logSplitExpress
-     * @param realFilePaths
      */
     private void logMonitorPathDisassembled(String logSplitExpress, List<String> realFilePaths, String configPath) {
         List<String> cleanedPathList = Lists.newArrayList();
         if (StringUtils.isNotBlank(logSplitExpress)) {
             PathUtils.dismantlingStrWithSymbol(logSplitExpress, cleanedPathList);
         }
-        if (LogTypeEnum.OPENTELEMETRY == logTypeEnum || realFilePaths.isEmpty()) {
+        if (LogTypeEnum.OPENTELEMETRY == logTypeEnum || realFilePaths.isEmpty() || ChannelServiceFactory.isSpecialFilePath(configPath)) {
             opentelemetryMonitor(configPath);
             return;
         }
@@ -296,7 +293,7 @@ public class ChannelServiceImpl extends AbstractChannelService {
 
     private void opentelemetryMonitor(String configPath) {
         List<String> cleanedPathList = ChannelUtil.buildLogExpressList(configPath);
-        monitorFileList.add(MonitorFile.of(configPath, cleanedPathList.get(0), logTypeEnum, collectOnce));
+        monitorFileList.add(MonitorFile.of(configPath, cleanedPathList.getFirst(), logTypeEnum, collectOnce));
     }
 
     private ReadListener initFileReadListener(MLog mLog, String patternCode, String ip, String pattern) {
@@ -396,7 +393,7 @@ public class ChannelServiceImpl extends AbstractChannelService {
             stopOldCurrentFileThread(filePath);
             log.info("start to collect file,channelId:{},fileName:{}", channelId, filePath);
             logFileMap.put(filePath, logFile);
-            Future<?> future = ExecutorUtil.submit(() -> {
+            Future<?> future = getExecutorServiceByType(logTypeEnum).submit(() -> {
                 try {
                     log.info("filePath:{},is VirtualThread {}, thread:{},id:{}", filePath, Thread.currentThread().isVirtual(), Thread.currentThread(), Thread.currentThread().threadId());
                     logFile.readLine();
